[metadata]
name = f1-racers-report
author = Andriy Stefanyuk
author_email = andriy11143@gmail.com
version = 1.0.8
description = Application that generates the report from provided files
long_description = file: README.md
long_description_content_type = text/markdown
keywords = packaging, resources
home_page = https://github.com/stefanyuk/racing-report
project_urls =
    Issue Tracker = https://github.com/stefanyuk/racing-report/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
install_requires =
    colorama


[bdist_wheel]
universal = 1